--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
-    "next": "^13.4.9",
+    "next": "^13.4.10-canary.3",
     "npm": "^9.6.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
