--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "canvas": "^2.11.2",
     "encoding": "^0.1.13",
     "typescript": "^5.1.3"
   }
