--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^13.4.10-canary.3",
     "npm": "^9.6.7",
     "postcss": "8.4.24",
+    "pureimage": "^0.3.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -32,7 +33,6 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "canvas": "^2.11.2",
     "encoding": "^0.1.13",
     "typescript": "^5.1.3"
   }
